--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div id="root"></div>
